Z-Index Fix in Header + Spline Model Responsive

--- a/style.css
+++ b/style.css
@@ -17,11 +17,6 @@
     --color-mark: rgba(116,116,116,.2);
     --svg: ;
 
-    --circulo1: invert(29%) sepia(71%) saturate(1236%) hue-rotate(78deg) brightness(92%) contrast(89%);
-    --circulo2: invert(24%) sepia(43%) saturate(3973%) hue-rotate(214deg) brightness(87%) contrast(85%);
-    --circulo3: invert(80%) sepia(5%) saturate(3944%) hue-rotate(63deg) brightness(91%) contrast(84%);
-    --circulo4: invert(50%) sepia(83%) saturate(212%) hue-rotate(263deg) brightness(84%) contrast(87%);
-
     --border-radius-1: 0.3rem;
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
@@ -40,10 +35,6 @@
     --color-mark: rgb(116, 116, 116);
     --svg: invert(1);
 
-    --circulo1: invert(1) sepia(71%) saturate(1236%) hue-rotate(78deg) brightness(92%) contrast(89%);
-    --circulo2: invert(1) sepia(43%) saturate(3973%) hue-rotate(214deg) brightness(87%) contrast(85%);
-    --circulo3: invert(1) sepia(5%) saturate(3944%) hue-rotate(63deg) brightness(91%) contrast(84%);
-    --circulo4: invert(1) sepia(83%) saturate(212%) hue-rotate(263deg) brightness(84%) contrast(87%);
 }
 
 /* Estilos generales */
@@ -93,42 +84,6 @@ body {
     background-color: var(--background-color);
 }
 
-/* Definición de estilos para los círculos */
-.circulos {
-    display: none;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    filter: blur(70px);
-    animation: circulo1 30s linear infinite both;
-}
-
-.circulos .circulo {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    filter: blur(50px);
-    animation: circulo1 100s linear infinite both;
-}
-
-.circulos .circulo1 {
-    top: 10%;
-    left: 10%;
-    filter: var(--circulo1);
-}
-
-@keyframes circulo1 {
-    from {
-        transform: rotate(0deg) scale(3);
-    }
-    to {
-        transform: rotate(360deg) scale(3);
-    }
-}
-
 /* Definición de estilos para el encabezado */
 .header {
     width: 100%;
@@ -146,7 +101,7 @@ body {
 }
 
 .header .h1 {
-    z-index: 2;
+    z-index: 99;
 }
 
 /**.header .h1 .a {}
@@ -159,7 +114,7 @@ body {
     justify-content: space-between;
     align-items: center;
 
-    z-index: 2;
+    z-index: 99;
 }
 
 .header .li {
@@ -273,7 +228,17 @@ body {
     }
 
     .header.visible {
-        top: 0; /* Mostrar el encabezado en la parte superior */
+        top: 3em; /* Mostrar el encabezado en la parte superior */
+    }
+    /*Estilos del 3D*/
+    .spline {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3em;
+        margin-bottom: -8em;
+        
     }
 }
 
@@ -563,12 +528,6 @@ mark, .mark {
     
 }
 
-.spline-frame {
-    width: 100%;
-    height: 100%;
-    border: none; /* Opcional: elimina el borde del iframe */
-}
-
 .overlay-logo {
     position: absolute; /* Se ajusta al logo que estás ocultando */
     bottom: -30px; /* Ajusta la posición */
@@ -582,7 +541,11 @@ mark, .mark {
 /* Media query para pantallas de teléfono (por debajo de 768px de ancho) */
 @media only screen and (max-width: 768px) {
     .overlay-logo {
-        display: none; /* Elimina el cuadrado blanco en dispositivos móviles */
+        position: absolute; /* Se ajusta al logo que estás ocultando */
+        bottom: -30px; /* Ajusta la posición */
+        height: 39px;
+        border: rgba(255, 255, 255, 0.5);
+        border-radius: 4px;
     }
 }
 
